plugins {
	id "java-library"
}

// Depends on the current Java Version
if (JavaVersion.current() >= JavaVersion.VERSION_1_9) {
	sourceCompatibility = JavaVersion.VERSION_1_9
	targetCompatibility = JavaVersion.VERSION_1_9
} else {
	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8
}

description = "Fake JavaDoc API"

if (JavaVersion.current() >= JavaVersion.VERSION_1_9) {
	compileJava {
		options.encoding = "UTF-8"
		options.incremental = true

		options.compilerArgs.addAll([
			"--add-exports",
			"squirreljme.javadoc.compat/com.sun.javadoc=ALL-UNNAMED"
		])
	}
}
